--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@types/chai": "^4.2.22",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.11.11",
+    "@typescript-eslint/eslint-plugin": "^5.5.0",
+    "@typescript-eslint/parser": "^5.5.0",
     "chai": "^4.3.4",
     "eslint": "^8.3.0",
     "eslint-plugin-no-only-tests": "^2.6.0",
