--- a/package.json
+++ b/package.json
@@ -21,16 +21,25 @@
     "test": "test"
   },
   "scripts": {
-    "prebuild": "rm -rf ./dist",
-    "build": "tsc",
+    "prebuild": "npm run typecheck && npm run clean",
+    "build": "babel --out-dir dist lib --extensions '.ts' --ignore '**/*.d.ts'",
+    "clean": "rm -rf ./dist",
     "lint": "eslint {lib,test}",
     "lint:fix": "eslint --fix {lib,test}",
     "prepare": "husky install",
     "sort:pkg": "sort-package-json",
-    "test": "mocha --require ts-node/register --extension ts test/**"
+    "test": "mocha test/**",
+    "typecheck": "tsc"
   },
-  "dependencies": {},
+  "dependencies": {
+    "core-js": "^3.19.2"
+  },
   "devDependencies": {
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-typescript": "^7.16.0",
+    "@babel/register": "^7.16.0",
     "@types/chai": "^4.2.22",
     "@types/mocha": "^9.0.0",
     "@types/node": "^16.11.11",
@@ -42,7 +51,6 @@
     "husky": "^7.0.0",
     "mocha": "^9.1.3",
     "sort-package-json": "^1.53.1",
-    "ts-node": "^10.4.0",
     "typescript": "^4.5.2"
   }
 }
