Update "lint" scripts

--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "prebuild": "npm run typecheck && npm run clean",
     "build": "babel --out-dir dist lib --extensions '.ts' --ignore '**/*.d.ts'",
     "clean": "rm -rf ./dist",
-    "lint": "eslint {lib,test}",
-    "lint:fix": "eslint --fix {lib,test}",
+    "lint": "eslint lib test",
+    "lint:fix": "eslint --fix  lib test",
     "prepare": "husky install",
     "sort:pkg": "sort-package-json",
     "test": "mocha test/**",
