--- a/package.json
+++ b/package.json
@@ -52,5 +52,9 @@
     "mocha": "^9.1.3",
     "sort-package-json": "^1.53.1",
     "typescript": "^4.5.2"
+  },
+  "engines": {
+    "node": ">=12",
+    "npm": ">=6"
   }
 }
