--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clean": "rm -rf ./dist",
     "lint": "eslint lib test",
     "lint:fix": "eslint --fix  lib test",
+    "make:property": "node ./scripts/make-property.cjs",
     "prepare": "husky install",
     "sort:pkg": "sort-package-json",
     "test": "mocha test/**",
@@ -49,7 +50,9 @@
     "chai": "^4.3.4",
     "eslint": "^8.3.0",
     "eslint-plugin-no-only-tests": "^2.6.0",
+    "handlebars": "^4.7.7",
     "husky": "^7.0.0",
+    "lodash": "^4.17.21",
     "mocha": "^9.1.3",
     "sort-package-json": "^1.53.1",
     "typescript": "^4.5.2"
