Update ESLint test rules

--- a/test/.eslintrc.yaml
+++ b/test/.eslintrc.yaml
@@ -5,3 +5,4 @@ plugins:
   - no-only-tests
 rules:
   no-only-tests/no-only-tests: error
+  no-useless-escape: off # Needed to test property value escaping.
