--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "print:property": "node ./scripts/print-property.cjs",
     "prepare": "husky install",
     "sort:pkg": "sort-package-json",
-    "test": "mocha test/**",
-    "test:watch": "mocha test/** --watch",
+    "test": "mocha",
+    "test:watch": "mocha --watch",
     "typecheck": "tsc"
   },
   "dependencies": {
