Change property constructor API

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -12,6 +12,7 @@ env:
 rules:
   '@typescript-eslint/no-explicit-any': off
   '@typescript-eslint/no-extra-semi': off
+  '@typescript-eslint/no-unused-vars': error
   '@typescript-eslint/semi': error
   arrow-spacing: error
   block-spacing: error
