Update package keywords

--- a/packages/vcard4-generator/package.json
+++ b/packages/vcard4-generator/package.json
@@ -3,9 +3,12 @@
   "version": "0.0.0",
   "description": "A vCard 4 generator library.",
   "keywords": [
+    "create",
     "creator",
+    "generate",
     "generator",
     "make",
+    "maker",
     "vcard",
     "vcard4",
     "vcf"
