--- a/packages/vcard4-generator/tsconfig.d.json
+++ b/packages/vcard4-generator/tsconfig.d.json
@@ -1,11 +1,11 @@
 {
-    "extends": "./tsconfig.json",
+    "extends": "../../tsconfig.d.json",
     "compilerOptions": {
+        "baseUrl": "./",
         "rootDir": "./lib",
-        "declaration": true,
-        "emitDeclarationOnly": true,
-        "outFile": "./dist/index.d.ts",
-        "noEmit": false,
-        "isolatedModules": false
-    }
+        "outDir": "./dist"
+    },
+    "include": [
+        "lib"
+    ]
 }
