--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,8 +24,8 @@
     // "useDefineForClassFields": true,                  /* Emit ECMAScript-standard-compliant class fields. */
 
     /* Modules */
-    "module": "commonjs",                                /* Specify what module code is generated. */
-    // "rootDir": "./",                                  /* Specify the root folder within your source files. */
+    "module": "esnext",                                  /* Specify what module code is generated. */
+    "rootDir": "./",                                     /* Specify the root folder within your source files. */
     "moduleResolution": "node",                          /* Specify how TypeScript looks up a file from a given module specifier. */
     "baseUrl": "./",                                     /* Specify the base directory to resolve non-relative module names. */
     "paths": {                                           /* Specify a set of entries that re-map imports to additional lookup locations. */
@@ -101,11 +101,19 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "exclude": [
-      "test"
+      "packages/*/dist",
+      "packages/*/scripts",
+      "packages/*/test"
+  ],
+  "include": [
+      "packages"
   ],
   "references": [
       {
-          "path": "packages/vcard4-generator"
+          "path": "packages/vcard4-generator/tsconfig.d.json"
+      },
+      {
+          "path": "packages/vcard4-meta/tsconfig.d.json"
       }
   ]
 }
