--- a/packages/vcard4-generator/package.json
+++ b/packages/vcard4-generator/package.json
@@ -40,8 +40,7 @@
     "make:property": "node ./scripts/make-property.cjs",
     "print:property": "node ./scripts/print-property.cjs",
     "sort:pkg": "sort-package-json",
-    "test": "mocha",
-    "test:watch": "mocha --watch",
+    "test": "echo \"Error: run tests from root\" && exit 1",
     "typecheck": "tsc"
   },
   "dependencies": {
