Update vcard4-generator package manifest

--- a/packages/vcard4-generator/package.json
+++ b/packages/vcard4-generator/package.json
@@ -23,11 +23,15 @@
   },
   "license": "MIT",
   "author": "James Benner <james.benner@gmail.com> (http://www.jamesbenner.com/)",
-  "main": "dist/index.js",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "directories": {
     "lib": "lib",
     "test": "test"
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "prebuild": "npm run typecheck && npm run clean",
     "build": "npm run build:js && npm run build:types",
@@ -57,5 +61,8 @@
   "engines": {
     "node": ">=12",
     "npm": ">=6"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
