--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,12 +22,10 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Install dependencies
         run: npm ci
-      - name: Bootstrap packages
-        run: npx lerna bootstrap
       - name: Lint
         run: npx lerna run lint
-      - name: Build types
-        run: npx lerna run build:types
+      - name: Build
+        run: npm run build
       - name: Type check
         run: npx lerna run typecheck
       - name: Test
