--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "description": "The vCard monorepo.",
   "keywords": [
-    "vcard"
+    "vcard",
+    "vcf"
   ],
   "homepage": "https://github.com/jbenner-radham/vcardjs#readme",
   "bugs": {
@@ -34,10 +35,12 @@
     "@babel/register": "^7.16.0",
     "@types/chai": "^4.2.22",
     "@types/mocha": "^9.0.0",
-    "@types/node": "^16.11.11",
+    "@types/node": "^16.11.43",
+    "@types/sinon": "^10.0.13",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
     "chai": "^4.3.6",
+    "core-js": "^3.24.1",
     "eslint": "^8.3.0",
     "eslint-plugin-no-only-tests": "^2.6.0",
     "husky": "^7.0.0",
@@ -45,11 +48,12 @@
     "lint-staged": "^12.3.5",
     "mocha": "^9.2.2",
     "rimraf": "^3.0.2",
+    "sinon": "^14.0.0",
     "sort-package-json": "^1.53.1",
-    "typescript": "^4.5.2"
+    "typescript": "^4.7.4"
   },
   "engines": {
     "node": ">=12",
-    "npm": ">=6"
+    "npm": ">=8"
   }
 }
