Temporarily make vcard4-parser private

--- a/packages/vcard4-parser/package.json
+++ b/packages/vcard4-parser/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@vcard/vcard4-parser",
   "version": "0.0.0",
+  "private": true,
   "description": "A vCard 4 parser library.",
   "keywords": [
     "parser",
