Update to npm v8 for vcard4-parser

--- a/packages/vcard4-parser/package.json
+++ b/packages/vcard4-parser/package.json
@@ -46,6 +46,10 @@
   "devDependencies": {
     "@types/lodash.camelcase": "^4.3.7"
   },
+  "engines": {
+    "node": ">=12",
+    "npm": ">=8"
+  },
   "publishConfig": {
     "access": "public"
   }
