--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
     "moduleResolution": "node",                          /* Specify how TypeScript looks up a file from a given module specifier. */
     "baseUrl": "./",                                     /* Specify the base directory to resolve non-relative module names. */
     "paths": {                                           /* Specify a set of entries that re-map imports to additional lookup locations. */
-        "@vcard/*": ["packages/*/lib"]
+      "@vcard/*": ["packages/*/lib"]
     },
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     // "typeRoots": [],                                  /* Specify multiple folders that act like `./node_modules/@types`. */
@@ -100,23 +100,17 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "exclude": [
-      "packages/*/dist",
-      "packages/*/scripts",
-      "packages/*/test"
-  ],
-  "include": [
-      "packages"
-  ],
+  "exclude": ["packages/*/dist", "packages/*/scripts", "packages/*/test"],
+  "include": ["packages"],
   "references": [
-      {
-          "path": "packages/vcard4-generator/tsconfig.d.json"
-      },
-      {
-          "path": "packages/vcard4-meta/tsconfig.d.json"
-      },
-      {
-        "path": "packages/vcard4-parser/tsconfig.d.json"
-      }
+    {
+      "path": "packages/vcard4-generator/tsconfig.d.json"
+    },
+    {
+      "path": "packages/vcard4-meta/tsconfig.d.json"
+    },
+    {
+      "path": "packages/vcard4-parser/tsconfig.d.json"
+    }
   ]
 }
