--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "git+https://github.com/jbenner-radham/vcardjs.git"
   },
   "license": "MIT",
-  "author": "James Benner <james.benner@gmail.com> (https://www.jamesbenner.com/)",
+  "author": "James Benner <hello@jamesbenner.com> (https://www.jamesbenner.com/)",
   "workspaces": [
     "packages/*"
   ],
