--- a/packages/vcard4-parser/package.json
+++ b/packages/vcard4-parser/package.json
@@ -18,7 +18,7 @@
     "url": "git+https://github.com/jbenner-radham/vcardjs.git"
   },
   "license": "MIT",
-  "author": "James Benner <james.benner@gmail.com>",
+  "author": "James Benner <hello@jamesbenner.com> (https://www.jamesbenner.com/)",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "directories": {
