Add Chai model assertion helper

--- a/.mocharc.yaml
+++ b/.mocharc.yaml
@@ -1,4 +1,6 @@
 ---
 extension: ts
-require: babel-register.cjs
+require:
+  - babel-register.cjs
+  - chai-register.cjs
 spec: packages/*/test/**/*.spec.ts
