--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -49,7 +49,8 @@ rules:
   max-len:
     - error
     - code: 120
-      comments: 165
+      comments: 120
+      ignoreUrls: true
   no-console: off
   no-tabs:
     - error
