--- a/packages/vcard4-generator/package.json
+++ b/packages/vcard4-generator/package.json
@@ -51,7 +51,8 @@
     "@vcard/vcard4-meta": "^1.0.0-rc.4",
     "core-js": "^3.24.1",
     "lodash.isplainobject": "^4.0.6",
-    "lodash.kebabcase": "^4.1.1"
+    "lodash.kebabcase": "^4.1.1",
+    "type-fest": "^4.26.1"
   },
   "devDependencies": {
     "@types/lodash.isplainobject": "^4.0.6",
