Remove Babel and Lerna

--- a/package.json
+++ b/package.json
@@ -22,31 +22,24 @@
     "packages/*"
   ],
   "scripts": {
-    "prebuild": "npm run rm:tsbuildinfo",
-    "build": "lerna run build",
-    "clean": "lerna run clean",
+    "prebuild": "npm run clean",
+    "build": "tsc --build tsconfig.build.json",
+    "clean": "npm run clean --workspaces",
+    "lint": "npm run lint --workspaces",
     "prepare": "husky",
-    "rm:tsbuildinfo": "rimraf tsconfig.tsbuildinfo && rimraf packages/*/tsconfig.d.tsbuildinfo",
     "test": "vitest --watch=false",
     "test:watch": "vitest"
   },
   "devDependencies": {
-    "@babel/cli": "^7.16.0",
-    "@babel/core": "^7.26.0",
-    "@babel/preset-env": "^7.26.0",
-    "@babel/preset-typescript": "^7.26.0",
-    "@babel/register": "^7.16.0",
     "@types/chai": "^5.0.0",
     "@types/node": "^18.19.59",
     "@types/sinon": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
     "chai": "^5.1.2",
-    "core-js": "^3.24.1",
     "eslint": "^8.3.0",
     "eslint-plugin-no-only-tests": "^2.6.0",
     "husky": "^9.1.6",
-    "lerna": "^8.1.8",
     "lint-staged": "^15.2.10",
     "rimraf": "^6.0.1",
     "sinon": "^19.0.2",
