--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,10 +21,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Lint
-        run: npx lerna run lint
+        run: npm run lint
       - name: Build
         run: npm run build
-      - name: Type check
-        run: npx lerna run typecheck
       - name: Test
         run: npm test
