--- a/packages/vcard4-generator/package.json
+++ b/packages/vcard4-generator/package.json
@@ -35,21 +35,18 @@
   ],
   "scripts": {
     "prebuild": "npm run clean",
-    "build": "npm run build:js && npm run build:types",
-    "build:js": "babel --root-mode upward --out-dir dist lib --extensions '.ts' --ignore '**/*.d.ts'",
-    "build:types": "tsc --project './tsconfig.d.json'",
-    "clean": "rimraf ./dist",
+    "build": "tsc --build",
+    "clean": "rimraf dist tsconfig.tsbuildinfo",
     "lint": "eslint lib test",
     "lint:fix": "eslint --fix lib test",
     "make:property": "node ./scripts/make-property.cjs",
+    "prepack": "npm run build",
     "print:property": "node ./scripts/print-property.cjs",
     "sort:pkg": "sort-package-json",
-    "test": "echo \"Error: run tests from root\" && exit 1",
-    "typecheck": "tsc"
+    "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
     "@vcard/vcard4-meta": "^1.0.0-rc.4",
-    "core-js": "^3.24.1",
     "lodash.isplainobject": "^4.0.6",
     "lodash.kebabcase": "^4.1.1",
     "type-fest": "^4.26.1"
