--- a/packages/vcard4-meta/package.json
+++ b/packages/vcard4-meta/package.json
@@ -31,16 +31,13 @@
   ],
   "scripts": {
     "prebuild": "npm run clean",
-    "build": "npm run build:js && npm run build:types",
-    "build:js": "babel --root-mode upward --out-dir dist lib --extensions '.ts' --ignore '**/*.d.ts'",
-    "build:types": "tsc --project './tsconfig.d.json'",
-    "clean": "rimraf ./dist",
+    "build": "tsc --build",
+    "clean": "rimraf dist tsconfig.tsbuildinfo",
     "lint": "eslint lib test",
     "lint:fix": "eslint --fix lib test",
-    "prepack": "rimraf ./dist/*.tsbuildinfo",
+    "prepack": "npm run build",
     "sort:pkg": "sort-package-json",
-    "test": "echo \"Error: run tests from root\" && exit 1",
-    "typecheck": "tsc"
+    "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "engines": {
     "node": ">=18",
