--- a/package.json
+++ b/package.json
@@ -25,26 +25,30 @@
     "prebuild": "npm run clean",
     "build": "tsc --build tsconfig.build.json",
     "clean": "npm run clean --workspaces",
-    "lint": "npm run lint --workspaces",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
     "prepare": "husky",
     "test": "vitest --watch=false",
     "test:watch": "vitest"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.2.1",
+    "@eslint/js": "^9.13.0",
+    "@stylistic/eslint-plugin": "^2.9.0",
     "@types/chai": "^5.0.0",
     "@types/node": "^18.19.59",
     "@types/sinon": "^17.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.5.0",
-    "@typescript-eslint/parser": "^5.5.0",
     "chai": "^5.1.2",
-    "eslint": "^8.3.0",
-    "eslint-plugin-no-only-tests": "^2.6.0",
+    "eslint": "^9.13.0",
+    "eslint-plugin-no-only-tests": "^3.3.0",
+    "globals": "^15.11.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "rimraf": "^6.0.1",
     "sinon": "^19.0.2",
     "sort-package-json": "^2.10.1",
     "typescript": "^5.6.3",
+    "typescript-eslint": "^8.11.0",
     "vitest": "^2.1.3"
   },
   "engines": {
