Update package test scripts

--- a/packages/vcard4-generator/package.json
+++ b/packages/vcard4-generator/package.json
@@ -41,7 +41,7 @@
     "prepack": "npm run build",
     "print:property": "node ./scripts/print-property.cjs",
     "sort:pkg": "sort-package-json",
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "test": "cd ../../; npm test"
   },
   "dependencies": {
     "@vcard/vcard4-meta": "^1.0.0-rc.4",
