--- a/packages/vcard4-meta/package.json
+++ b/packages/vcard4-meta/package.json
@@ -35,7 +35,7 @@
     "clean": "rimraf dist tsconfig.tsbuildinfo",
     "prepack": "npm run build",
     "sort:pkg": "sort-package-json",
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "test": "cd ../../; npm test"
   },
   "engines": {
     "node": ">=18",
