--- a/packages/vcard4-generator/package.json
+++ b/packages/vcard4-generator/package.json
@@ -19,7 +19,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jbenner-radham/vcardjs.git"
+    "url": "git+https://github.com/jbenner-radham/vcardjs.git",
+    "directory": "packages/vcard4-generator"
   },
   "license": "MIT",
   "author": "James Benner <hello@jamesbenner.com> (https://www.jamesbenner.com/)",
