Add version script to packages

--- a/packages/vcard4-generator/package.json
+++ b/packages/vcard4-generator/package.json
@@ -42,7 +42,8 @@
     "prepack": "npm run build",
     "print:property": "node ./scripts/print-property.cjs",
     "sort:pkg": "sort-package-json",
-    "test": "cd ../../; npm test"
+    "test": "cd ../../; npm test",
+    "version": "npm --no-git-tag-version version"
   },
   "dependencies": {
     "@vcard/vcard4-meta": "^1.0.0-rc.4",
