--- a/packages/vcard4-meta/package.json
+++ b/packages/vcard4-meta/package.json
@@ -36,7 +36,8 @@
     "clean": "rimraf dist tsconfig.tsbuildinfo",
     "prepack": "npm run build",
     "sort:pkg": "sort-package-json",
-    "test": "cd ../../; npm test"
+    "test": "cd ../../; npm test",
+    "version": "npm --no-git-tag-version version"
   },
   "engines": {
     "node": ">=18",
