--- a/packages/vcard4-parser/package.json
+++ b/packages/vcard4-parser/package.json
@@ -36,7 +36,8 @@
     "clean": "rimraf dist tsconfig.tsbuildinfo",
     "prepack": "npm run build",
     "sort:pkg": "sort-package-json",
-    "test": "cd ../../; npm test"
+    "test": "cd ../../; npm test",
+    "version": "npm --no-git-tag-version version"
   },
   "dependencies": {
     "@vcard/vcard4-meta": "^1.0.0-rc.4",
